--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,12 @@ typings/
 
 # next.js build output
 .next
+
+
+node_modules
+dist
+apidoc
+.DS_Store
+package-lock.json
+pm2-scripts/pm2-geral.json
+uploads/*
