--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[NodeJS](https://nodejs.org/en/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,20 @@
   },
   "homepage": "https://github.com/schmitz-mauricio/sevensys-nodejs#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "http": "0.0.0",
+    "sequelize": "^5.12.2",
+    "sequelize-typescript": "^1.0.0-beta.3",
     "typescript": "^3.5.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.0",
+    "@types/express": "^4.0.39",
+    "@types/node": "^12.6.9",
+    "ts-node": "^3.3.0"
   }
 }
