--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
         "outDir": "./dist",
         "baseUrl": "./src",
         "allowJs": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
+        
     },
     "include": [
         "src/**/*.ts",
