--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,10 @@
 NODE_ENV=development
 
 #PORTS
-TEST_PORT=3000
+TEST_PORT=3001
+PRODUCT_PORT=3002
+USER_PORT=3003
 
+#AUTH
+SECRET=mauricio
 USE_SSL=false
