--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/tsc"
+    "build": "rm -rf ./dist && ./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
@@ -18,14 +18,17 @@
   },
   "homepage": "https://github.com/schmitz-mauricio/sevensys-nodejs#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.5.1",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.20.0",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.12.2",
@@ -33,9 +36,9 @@
     "typescript": "^3.5.3"
   },
   "devDependencies": {
-    "sequelize-cli": "^5.5.0",
     "@types/express": "^4.0.39",
     "@types/node": "^12.6.9",
+    "sequelize-cli-typescript": "^3.2.0-c",
     "ts-node": "^3.3.0"
   }
 }
