--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[NodeJS](https://nodejs.org/en/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf ./dist && ./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,19 @@
   },
   "homepage": "https://github.com/schmitz-mauricio/sevensys-nodejs#readme",
   "dependencies": {
+    "@types/node": "^12.7.1",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.20.0",
     "http": "0.0.0",
+    "mysql2": "^1.6.5",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.12.2",
+    "sequelize-typescript": "^1.0.0-beta.3",
     "typescript": "^3.5.3"
   }
 }
