--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,18 @@
 {
     "version": "0.2.0",
     "configurations": [
-      {
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "GATEWAY-API",
+            "preLaunchTask": "typescript",
+            "program": "${workspaceFolder}/dist/gateway/index.js",
+            "cwd": "${workspaceFolder}",
+            "protocol": "inspector",
+            "outFiles": [
+                "${workspaceFolder}/dist/**/*.js"
+            ]
+        },{
           "type": "node",
           "request": "launch",
           "name": "TEST-API",
@@ -19,6 +30,18 @@
           "name": "PRODUCT-API",
           "preLaunchTask": "typescript",
           "program": "${workspaceFolder}/dist/services/product/index.js",
+          "cwd": "${workspaceFolder}",
+          "protocol": "inspector",
+          "outFiles": [
+              "${workspaceFolder}/dist/**/*.js"
+          ]
+      },
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "USER-API",
+          "preLaunchTask": "typescript",
+          "program": "${workspaceFolder}/dist/services/user/index.js",
           "cwd": "${workspaceFolder}",
           "protocol": "inspector",
           "outFiles": [
