--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
   },
   "homepage": "https://github.com/schmitz-mauricio/sevensys-nodejs#readme",
   "dependencies": {
+    "@types/express": "^4.17.1",
     "@types/node": "^12.7.1",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
+    "express-http-proxy": "^1.5.1",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.20.0",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.12.2",
