--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
@@ -32,8 +33,11 @@
     "helmet": "^3.20.0",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.6.11",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.0",
     "sequelize": "^5.12.2",
     "sequelize-typescript": "^1.0.0-beta.3",
     "typescript": "^3.5.3"
