--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./dist && ./node_modules/.bin/tsc"
+    "build": "rm -rf ./dist && ./node_modules/.bin/tsc",
+    "docs": "npm run build && apidoc -i dist/ -o dist/apidoc/"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.1",
+    "apidoc": "^0.17.7",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
