--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,12 @@
 NODE_ENV=development
 
 #PORTS
+HOST=http://localhost
 TEST_PORT=3001
 PRODUCT_PORT=3002
 USER_PORT=3003
+STOCK_PORT=3004
+ORDER_PORT=3005
 
 #AUTH
 SECRET=mauricio
