--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./dist && ./node_modules/.bin/tsc"
+    "build": "rm -rf ./dist && ./node_modules/.bin/tsc && apidoc -i dist/ -o dist/apidoc/",
+    "docs": "npm run build && apidoc -i dist/ -o dist/apidoc/"
   },
   "repository": {
     "type": "git",
@@ -22,15 +23,24 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "express-http-proxy": "^1.5.1",
     "express-rate-limit": "^5.0.0",
+    "grid-fs": "^1.0.1",
     "helmet": "^3.20.0",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.6.10",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "pagarme": "^4.4.0",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.0",
     "sequelize": "^5.12.2",
     "sequelize-typescript": "^1.0.0-beta.3",
     "typescript": "^3.5.3"
