--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,6 +59,18 @@
           "outFiles": [
               "${workspaceFolder}/dist/**/*.js"
           ]
+      },
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "ORDER-API",
+          "preLaunchTask": "typescript",
+          "program": "${workspaceFolder}/dist/services/order/index.js",
+          "cwd": "${workspaceFolder}",
+          "protocol": "inspector",
+          "outFiles": [
+              "${workspaceFolder}/dist/**/*.js"
+          ]
       }
     ]
   }
