--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "express-basic-auth": "^1.2.0",
     "express-http-proxy": "^1.5.1",
     "express-rate-limit": "^5.0.0",
+    "grid-fs": "^1.0.1",
     "helmet": "^3.20.0",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mongodb": "^3.3.2",
     "mongoose": "^5.6.11",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
