--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-basic-auth": "^1.2.0",
     "express-http-proxy": "^1.5.1",
     "express-rate-limit": "^5.0.0",
+    "graylog2": "^0.2.1",
     "grid-fs": "^1.0.1",
     "helmet": "^3.20.0",
     "http": "0.0.0",
