--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "convert-array-to-csv": "^1.0.9",
     "cors": "^2.8.5",
     "cron": "^1.7.1",
     "dotenv": "^8.0.0",
@@ -32,6 +33,8 @@
     "express-basic-auth": "^1.2.0",
     "express-http-proxy": "^1.5.1",
     "express-rate-limit": "^5.0.0",
+    "fs": "0.0.1-security",
+    "ftp": "^0.3.10",
     "graylog2": "^0.2.1",
     "grid-fs": "^1.0.1",
     "helmet": "^3.20.0",
